proto_py_js/envoy.yaml

node:
  id: node1
  cluster: grpc-cluster

static_resources:
  clusters:
    - name: grpc-cluster
      connect_timeout: 1s
      type: strict_dns
      lb_policy: round_robin
      http2_protocol_options: {}  # Nécessaire pour le support gRPC via HTTP/2
      hosts:
        - socket_address:
            address: localhost
            port_value: 50051  # Port du serveur gRPC

  listeners:
    - name: main_listener
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }  # Serveur écoute sur le port 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              config:
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: grpc-cluster
                http_filters:
                  - name: envoy.filters.http.router  # Assurez-vous d'utiliser ce filtre pour les requêtes HTTP
                  - name: envoy.filters.http.grpc_web  # Ajoutez le filtre pour le support gRPC-Web
